adding cross